--- a/card.css
+++ b/card.css
@@ -1,7 +1,3 @@
-html, body {
-    overflow: hidden; /* Prevents scrolling when button moves */
-}
-
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
@@ -13,7 +9,10 @@ body {
 
 #bg_video {
     position: fixed;
-    width: 100%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
 }
 
 #container {
@@ -170,14 +169,18 @@ button:active {
 
 #kbody {
     background-color: #fadffa;
+    display: flex;
+    flex-direction: column;
+    min-height: 100%vh;
 }
 
 #kdiv {
+    position: absolute;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: -50px;
-    gap: 50px;
+    top: 50px;
+    gap: 20px;
 }
 
 #keshiTxt {
@@ -196,14 +199,53 @@ button:active {
 #yay {
     opacity: 0;
     width: 1000px;
-    animation: fadeIn 1s ease-in-out 2s forwards;
+    animation: fadeIn 1s ease-in-out 4s forwards;
     margin: -50px;
 }
 
-#lastmsg {
+#msg1 {
     opacity: 0;
     color: white;
     font-weight: bolder;
     font-size: 30px;
     animation: fadeIn 1s ease-in-out 6s forwards;
+}
+
+#msg2 {
+    opacity: 0;
+    color: white;
+    font-weight: bolder;
+    font-size: 25px;
+    animation: fadeIn 1s ease-in-out 8s forwards;
+    margin-bottom: 0;
+}
+
+#kdiv video {
+    opacity: 0;
+    width: 500px;
+    animation: fadeIn 1s ease-in-out 2s forwards;
+    border: 10px dotted #edb2ee;
+    border-radius: 16px;
+    padding: 5px;
+}
+
+#kdiv audio {
+    opacity: 0;
+    animation: fadeIn 1s ease-in-out 2s forwards;
+}
+
+#kbody iframe {
+    display: none;
+}
+
+#arrow {
+    height: 100vh;
+    width: auto;
+}
+
+.heart {
+    opacity: 0;
+    width: 800px;
+    height: auto;
+    animation: fadeIn 1s ease-in-out 14s forwards;
 }
