--- a/card.css
+++ b/card.css
@@ -7,6 +7,10 @@ body {
     justify-content: center;
 }
 
+#heybody {
+    overflow: hidden;
+}
+
 #bg_video {
     position: fixed;
     min-width: 100%;
@@ -24,6 +28,8 @@ body {
     z-index: 1;
     height: 100vh;
     width: 700px;
+
+    margin-top: 60px;
 }
 
 img {
